# datavizml

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  bad_format_test.py  demonstration.ipynb  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: merge.yaml  publish.yaml  pull_request.yaml  push.yaml
datavizml/: __init__.py  datavizml.py  demonstration.ipynb  exploratorydataanalysis.py  singledistribution.py  utils.py
docs/: requirements_doc.txt
docs/source/: conf.py  datavizml.rst  demonstration.ipynb  index.rst  install.rst  modules.rst  related_reading.rst
tests/: test_datavizml.py  test_exploratorydataanalysis.py  test_singledistribution.py  utils.py
