[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datavizml"
version = "1.1.4"
authors = [
  { name="Dr Robert Dibble", email="robertdibble@live.co.uk" },
]
description = "A package to explore and visualise a dataset in preparation for an ML project"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
"Homepage" = "https://github.com/dibble07/datavizml"
"Bug Tracker" = "https://github.com/dibble07/datavizml/issues"
"Changelog" = "https://github.com/dibble07/datavizml/releases"