[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "datavizml"
authors = [
  { name="Dr Robert Dibble", email="robertdibble@live.co.uk" },
]
description = "A package to explore and visualise a dataset in preparation for an ML project"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dependencies = [
    "matplotlib",
    "numpy<2",
    "pandas",
    "ppscore",
    "scikit-learn",
    "scipy>=1.12.0",
    "seaborn",
    "statsmodels",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/dibble07/datavizml"
"Bug Tracker" = "https://github.com/dibble07/datavizml/issues"
"Changelog" = "https://github.com/dibble07/datavizml/releases"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["datavizml*"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
strict_optional = false
exclude = ['docs','env','tests/test_exploratorydataanalysis.py','tests/test_singledistribution.py']
files = '.'