[metadata]
name = datavizml
author = Dr Robert Dibble
author_email = robertdibble@live.co.uk
description = A package to explore and visualise a dataset in preparation for an ML project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dibble07/datavizml
project_urls =
    Bug Tracker = https://github.com/dibble07/datavizml/issues
    Changelog = https://github.com/dibble07/datavizml/releases
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = datavizml
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib
    numpy
    pandas
    ppscore
    scikit-learn
    statsmodels

[options.packages.find]
where = datavizml